<resources>
    <string name="app_name">Breast Cancer</string>
    <string name="splash_logo">splash_logo</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="get_started_to_the_app_now">Get Started to the app now !</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="welcome">Welcome !</string>
    <string name="login">Login</string>
    <string name="sign_in_to_your_account_to_continue">Sign in to your account to continue</string>
    <string name="email_address">Email Address</string>
    <string name="your_email_address">Your email address</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="don_t_have_an_account_register">Don’t have an account ? Register</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="your_full_name">Your full name</string>
    <string name="create_a_new_account_to_login_into_the_app">Create a new account to login into the app</string>
    <string name="user_name">User Name</string>
    <string name="confirm_your_password" translatable="false">Confirm your password</string>
    <string name="register">Register</string>
    <string name="confirm_your_pass">Confirm your password</string>
    <string name="passChar">**********</string>
    <string name="Created_succ">Account registered successfully !</string>
    <string name="start_using_app">your account is all set , you can now use the app !</string>
    <string name="start_now">Start now !</string>
    <string name="qusetionaire">Qusetionaire</string>
    <string name="name">Name</string>
    <string name="has_any_relative_been_diagnosed_or_suffered_from_breast_cancer">Has any relative been diagnosed or suffered from breast cancer?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="age_in_year">Age in year</string>
    <string name="number_of_individuals">Number of individuals</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="village_city_country">Village - City - Country</string>
    <string name="address">Address</string>
    <string name="is_this_address_your_original_country_of_origin">Is this address your original country of origin?</string>
    <string name="type_of_relatives">Type of relatives</string>
    <string name="both">Both</string>
    <string name="age_of_diagnosis">Age of diagnosis</string>
    <string name="other_symptoms">Other symptoms</string>
    <string name="have_you_undergone_hormone_replacement_n_therapy">Have you undergone hormone replacement \n therapy?</string>
    <string name="for_duration">For Duration</string>
    <string name="have_you_previously_taken_birth_control_pills">Have you previously taken birth control pills?</string>
    <string name="have_you_received_radiation_treatment_for_any_other_disease_besides_breast_cancer">Have you received radiation treatment for any \n  other disease  besides breast cancer?</string>
    <string name="have_you_previously_received_treatment_for_breast_cancer1">Have you previously received treatment \n for breast cancer?</string>
    <string name="what_is_the_age_of_having_your_first_child">What is the age of having your first child?</string>
    <string name="your_age">your age</string>
    <string name="what_is_the_age_of_having_your_last_child">What is the age of having your last child?</string>
    <string name="at_what_age_did_you_have_your_first_n_menstrual_cycle">At what age did you have your first \n menstrual cycle?</string>
    <string name="at_what_age_did_you_experience_menopause">At what age did you experience menopause?</string>
    <string name="next">Next</string>
    <string name="your_age_at_your_first_menstrual_cycle">your age at your first menstrual cycle?</string>
    <string name="excpected_age">Excpected age</string>
    <string name="was_the_breastfeeding_process_natural">Was the breastfeeding process natural?</string>
    <string name="race">Race</string>
    <string name="do_you_have_excess_weight">Do you have excess weight?</string>
    <string name="do_you_regularly_exercise">Do you regularly exercise?</string>
    <string name="are_you_a_smoker">Are you a smoker?</string>
    <string name="do_you_drink_prohibited_beverages_like_alcohol">Do you drink prohibited beverages like alcohol?</string>
    <string name="is_there_a_smoker_in_your_family">Is there a smoker in your family?</string>
    <string name="gender">Gender</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="choose_app_language">Choose App language</string>
    <string name="recognize_x_ray">Recognize X-Ray</string>
    <string name="result">Result :</string>
    <string name="ai_model">AI Model</string>
    <string name="have_you_done_sergury_for_breast_cancer">Have you done sergury for breast cancer ?</string>
    <string name="to_report_page">to report page</string>
    <string name="breast_cancer_non_surgical_treatment_q_amp_a"><![CDATA[Breast Cancer Non-Surgical Treatment Q&A]]></string>
    <string name="caution">Note!</string>
    <string name="note1">The feedback is valuable to us in improving the understanding and
delivery of non-surgical treatment options for breast cancer</string>
    <string name="note2">Your
insights will contribute to improving the quality of care for breast
cancer patients undergoing non-surgical \ntreatments</string>
    <string name="have_you_previously_received_treatment_for_breast_cancer">Have you previously received treatment for \n breast cancer?</string>
    <string name="if_you_answered_yes_to_the_previous_question_please_indicate_which_non_surgical_treatments_you_have_received_select_all_that_apply">If you answered \'yes\' to the previous question, please indicate which non-surgical treatments you have received. (Select all that apply)</string>
    <string name="chemotherapy">Chemotherapy</string>
    <string name="palliative_care">Palliative care</string>
    <string name="immunotherapy">Immunotherapy</string>
    <string name="radiation_therapy">Radiation therapy</string>
    <string name="targeted_therapy">Targeted therapy</string>
    <string name="how_would_you_describe_your_experience_with_chemotherapy_as_a_non_surgical_treatment_option_choose_one">How would you describe your experience with chemotherapy as a non-surgical treatment option? (Choose one)</string>
    <string name="_4_how_would_you_describe_your_experience_with_n_hormone_therapy_as_a_non_surgical_treatment_option_choose_one">4. How would you describe your experience with \n hormone therapy as a non-surgical treatment option? (Choose one)</string>
    <string name="how_would_you_describe_your_experience_with_radiation_therapy_as_a_non_surgical_treatment_option_choose_one">How would you describe your experience with radiation therapy as a non-surgical treatment option? (Choose one)</string>
    <string name="how_would_you_describe_your_experience_with_immunotherapy_as_a_non_surgical_treatment_option_choose_one">How would you describe your experience with immunotherapy as a non-surgical treatment option? (Choose one)</string>
    <string name="how_would_you_describe_your_experience_with_palliative_care_as_a_non_surgical_treatment_option_choose_one">How would you describe your experience with palliative care as a non-surgical treatment option? (Choose one)</string>
    <string name="_9_overall_how_satisfied_are_you_with_the_non_surgical_treatment_options_you_have_received_for_breast_cancer">9. Overall, how satisfied are you with the non-surgical treatment options you have received for breast cancer?</string>
    <string name="did_you_experience_any_side_effects_from_the_non_surgical_treatments_you_received_select_all_that_apply">Did you experience any side effects from the non-surgical treatments you received? (Select all that apply)</string>
    <string name="how_well_were_the_potential_side_effects_of_the_non_surgical_treatments_explained_to_you_before_starting_the_treatment">How well were the potential side effects of the non-surgical treatments explained to you before starting the treatment?</string>
    <string name="_12_did_you_receive_adequate_support_and_resources_to_manage_the_side_effects_of_the_non_surgical_treatments">12. Did you receive adequate support and resources to manage the side effects of the non-surgical treatments?</string>
    <string name="how_involved_were_you_in_the_decision_making_process_regarding_your_non_surgical_treatment_options">How involved were you in the decision-making process regarding your non-surgical treatment options?</string>
    <string name="did_you_receive_clear_information_about_the_expected_outcomes_and_benefits_of_the_non_surgical_treatments">Did you receive clear information about the expected outcomes and benefits of the non-surgical treatments?</string>
    <string name="were_you_provided_with_information_about_alternative_or_complementary_therapies_alongside_the_non_surgical_treatments">Were you provided with information about alternative or complementary therapies alongside the non-surgical treatments?</string>
    <string name="how_would_you_rate_the_overall_communication_and_coordination_of_your_non_surgical_treatment_plan_among_the_healthcare_team">How would you rate the overall communication and coordination of your non-surgical treatment plan among the healthcare team?</string>
    <string name="p4Q1">How well were the potential side effects of the non-surgical treatments explained to you before starting the treatment?</string>
    <string name="Very_well_explained">Very well explained </string>
    <string name="Somewhat_well_explained">Somewhat well explained</string>
    <string name="Not_well_explained">Not well explained</string>
    <string name="Not_applicable">Not applicable(did not experience any side effects)</string>
    <string name="p4Q2">Did you receive adequate support and resources to manage the side effects of the non-surgical treatments?</string>
    <string name="yes_i_received_sufficient_support_and_resources">Yes, I received sufficient support and resources</string>
    <string name="no_i_did_not_receive_sufficient_support_and_resources">No, I did not receive sufficient support and resources</string>
    <string name="n_a_did_not_experience_any_side_effects">N/A (did not experience any side effects)</string>
    <string name="p4Q3">How involved were you in the decision-making process regarding
your non-surgical treatment options?</string>
    <string name="fully_involved_my_preferences_were_considered">Fully involved, my preferences were considered</string>
    <string name="somewhat_involved_but_the_final_decision_was_made_by_the_healthcare_team">Somewhat involved, but the final decision was made by the healthcare team</string>
    <string name="ans">Not involved, the healthcare team made all the decisions</string>
    <string name="p4Q4">Did you receive clear information about the expected outcomes and benefits of the non-surgical treatments?</string>
    <string name="yes_the_information_was_clear_and_comprehensive">Yes, the information was clear and comprehensive</string>
    <string name="somewhat_but_i_would_have_liked_more_detailed_information">Somewhat, but I would have liked more detailed information</string>
    <string name="no_the_information_was_not_clear_or_insufficient">No, the information was not clear or insufficient</string>
    <string name="sendSucc">Your Answers Sent Successfully</string>
    <string name="backHome">Back to home page</string>
    <string name="thanks">Thank you for helping us improve the quality of non-surgical treatment!</string>
</resources>